[package]
name = "mimicry"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.12.0"
parking_lot = { version = "0.12.1", optional = true }
thread_local = "1.1.4"

mimicry-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
static_assertions = "1.1.0"

[features]
default = []
# Enables mocks that can be shared across multiple threads, unlike
# the default thread-local implementation.
shared = ["parking_lot"]

[workspace]
members = [".", "derive"]
