[package]
name = "mimicry"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["testing", "mock", "mocking", "spy"]
categories = ["development-tools::testing"]
description = "Lightweight mocking / spying library"
repository = "https://github.com/slowli/mimicry"

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Private dependencies (not exposed in crate API)
once_cell = "1.12.0"
ouroboros = { version = "0.15.0", optional = true }
parking_lot = "0.12.1"
thread_local = "1.1.4"

mimicry-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
doc-comment = "0.3.3"
static_assertions = "1.1.0"
version-sync = "0.9.4"

[features]
default = []
# Enables mocks that can be shared across multiple threads, unlike
# the default thread-local implementation.
shared = ["ouroboros"]

[workspace]
members = [".", "derive"]
