[package]
name = "mimicry-derive"
version = "0.1.0"
edition = "2021"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["testing", "mock", "mocking", "spy"]
categories = ["development-tools::testing"]
description = "Procedural macros for `mimicry`"
repository = "https://github.com/slowli/mimicry"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit-mut"] }

[dev-dependencies]
version-sync = "0.9.4"
